<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.appinventiv.taskfirebasedatabase.activity.SaveInfoActivity">
    <include layout="@layout/view_chat_application_toolbar"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
android:padding="@dimen/d_10dp"    >
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="@dimen/tv_25sp"
    android:text="@string/welcome"
    android:layout_gravity="center"
    android:textColor="@android:color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tv_15sp"
        android:text="@string/create_an_account_in_easy_style"
        android:layout_gravity="center"
        android:textColor="@android:color/black"/>
    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:maxLines="1"
        android:layout_marginTop="@dimen/d_5dp"
        android:background="@android:color/transparent"
        android:ellipsize="end"
        android:textSize="@dimen/tv_20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1dp"
        android:layout_marginBottom="@dimen/d_10dp"
        android:background="@android:color/darker_gray"
        />
    <EditText
        android:id="@+id/et_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:hint="@string/surname"
        android:layout_marginTop="@dimen/d_5dp"
        android:background="@android:color/transparent"
        android:textSize="@dimen/tv_20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1dp"
        android:layout_marginBottom="@dimen/d_10dp"
        android:background="@android:color/darker_gray"
        />
    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:maxLines="1"
        android:background="@android:color/transparent"
        android:ellipsize="end"
        android:layout_marginTop="@dimen/d_5dp"
        android:textSize="@dimen/tv_20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1dp"
        android:layout_marginBottom="@dimen/d_10dp"
        android:background="@android:color/darker_gray"
        />
    <EditText
        android:id="@+id/et_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_of_birth"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginTop="@dimen/d_5dp"
        android:background="@android:color/transparent"
        android:inputType="date"
        android:textSize="@dimen/tv_20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1dp"
        android:layout_marginBottom="@dimen/d_10dp"
        android:background="@android:color/darker_gray"
        />
    <EditText
        android:id="@+id/et_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:background="@android:color/transparent"
        android:layout_marginTop="@dimen/d_5dp"
        android:textSize="@dimen/tv_20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1dp"
        android:layout_marginBottom="@dimen/d_10dp"
        android:background="@android:color/darker_gray"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
       <TextView
           android:layout_width="@dimen/d_0dp"
           android:layout_height="wrap_content"
           android:text="@string/male"
           android:layout_weight="1"
android:gravity="center"
           android:textSize="@dimen/tv_15sp"
           android:drawableTop="@drawable/ic_signup_disable_male"/>
        <TextView
            android:layout_width="@dimen/d_0dp"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_weight="1"
android:gravity="center"
            android:textSize="@dimen/tv_15sp"
            android:drawableTop="@drawable/ic_signup_disable_female"/>

    </LinearLayout>
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tv_20sp"
        android:text="@string/submit"
        android:paddingRight="@dimen/d_20dp"
        android:paddingLeft="@dimen/d_10dp"
        android:layout_marginTop="@dimen/d_10dp"
        android:background="@color/light_green"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        />
</LinearLayout>
</LinearLayout>
