<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    >
    <include android:layout="@layout/view_toolbar"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1dp"
        android:background="@android:color/darker_gray"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_0dp"
        android:hint="@string/email"
        android:textSize="@dimen/tv_20sp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:layout_marginLeft="@dimen/d_10dp"
        android:textColor="@android:color/black"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:ellipsize="end"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1dp"
        android:layout_marginTop="@dimen/d_10dp"
        android:layout_marginLeft="@dimen/d_10dp"
        android:background="@android:color/darker_gray"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_0dp"
        android:hint="@string/password"
        android:textSize="@dimen/tv_20sp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/d_10dp"
        android:background="@android:color/transparent"
        android:textColor="@android:color/black"
        android:inputType="textPassword"
        android:maxLines="1"
        android:ellipsize="end"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1dp"
        android:layout_marginTop="@dimen/d_10dp"
        android:background="@android:color/darker_gray"
        />
    <Button
        android:layout_width="@dimen/d_150dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_orange_dark"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:background="@drawable/btn_circular_corner_border_orange"
        android:layout_marginTop="@dimen/d_15dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tv_22sp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/d_15dp"
        android:text="@string/forgot_your_password"/>

    <Button
        android:layout_width="@dimen/d_320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_circular_corner_red"
        android:text="@string/log_in_with_google"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/d_15dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:textSize="@dimen/d_18sp"
        android:textAllCaps="false"/>
    <Button
        android:layout_width="@dimen/d_320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/d_15dp"
        android:background="@drawable/btn_circular_corner_blue"
        android:text="@string/log_in_with_facebook"
        android:textAllCaps="false"
        android:textSize="@dimen/d_18sp"
        android:textColor="@android:color/white"/>
</LinearLayout>